assert(u_ctrl != blk1 && u_ctrl != blk2) failed: won't converge

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b36

      Test: java/util/concurrent/tck/JSR166TestCase.java

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/scratch/opt/mach5/mesos/work_dir/6ca7fdb2-d8bc-487a-bf39-87071d9f1b27/workspace/open/src/hotspot/share/opto/split_if.cpp:172), pid=20958, tid=68
      # assert(u_ctrl != blk1 && u_ctrl != blk2) failed: won't converge
      #
      # JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-2017-11-11-0411168.jesper.wilhelmsson.hs)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 10-internal+0-2017-11-11-0411168.jesper.wilhelmsson.hs, mixed mode, tiered, compressed oops, g1 gc, solaris-sparc)

        1. replay_modules_java_base_0_23209.log
          271 kB
          Tobias Hartmann
        2. replay_modules_java_base_0_23209.log
          271 kB
          Tobias Hartmann
        3. hs_err_modules_java_base_0_23209.log
          172 kB
          Tobias Hartmann
        4. hs_err_modules_java_base_0_23209.log
          172 kB
          Tobias Hartmann

            Assignee:
            Roland Westrelin
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: