8191153: assert(u_ctrl != blk1 && u_ctrl != blk2) failed: won't converge

Relax assert

Reviewed-by: kvn